@@ -21,6 +21,8 @@ copyright_year   = 2021
 [PPPort]
 filename = src/ppport.h
 override = 1
+[Typemap]
+module = ExtUtils::Typemaps::Magic
 
 [PodSyntaxTests]
 [PodCoverageTests]
