@@ -22,20 +22,3 @@ SV* S_clone_value(pTHX_ SV* original) {
 	POPSTACK;
 	return result;
 }
-
-SV* S_object_to_sv(pTHX_ void* object, HV* stash, const MGVTBL* magic_table, UV flags) {
-	SV* referent = newSV(0);
-	MAGIC* magic = sv_magicext(referent, NULL, PERL_MAGIC_ext, magic_table, object, 0);
-	magic->mg_flags |= flags;
-	return sv_bless(newRV_noinc(referent), stash);
-}
-
-MAGIC* S_sv_to_magic(pTHX_ SV* sv, const char* name, STRLEN namelen, const MGVTBL* magic_table) {
-	if (!sv_derived_from_pvn(sv, name, namelen, 0))
-		Perl_croak(aTHX_ "Object is not a %s", name);
-	MAGIC* magic = SvMAGICAL(SvRV(sv)) ? mg_findext(SvRV(sv), PERL_MAGIC_ext, magic_table) : NULL;
-	if (magic)
-		return magic;
-	else
-		Perl_croak(aTHX_ "%s object is lacking magic", name);
-}
